--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "functions-framework>=3.10.0",
+    "litellm>=1.80.9",
     "pynacl>=1.6.1",
     "requests>=2.32.5",
 ]
